[gd_scene load_steps=24 format=3 uid="uid://cxves47achr7l"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_87cqx"]
[ext_resource type="Texture2D" uid="uid://mjoo8a2x7wbg" path="res://UI/bkg_30.png" id="1_g3hhs"]
[ext_resource type="Theme" uid="uid://c8ivmupmyaa5s" path="res://UI/default.tres" id="2_8wue4"]
[ext_resource type="Texture2D" uid="uid://1vlfumpsh52" path="res://UI/lampa0.png" id="3_ehwqx"]
[ext_resource type="Texture2D" uid="uid://bm080ffdhfc1a" path="res://UI/kawa0.png" id="3_tffvf"]
[ext_resource type="Texture2D" uid="uid://b68qsjlks37lf" path="res://UI/lampa1.png" id="4_0kwep"]
[ext_resource type="Texture2D" uid="uid://dxu1rnojm3sns" path="res://UI/kawa1.png" id="4_5cakg"]
[ext_resource type="AudioStream" uid="uid://cysqrd6nvhmpq" path="res://Wavs/Reksio i Skarb Pirat√≥w OST - Muzamenu-(p).mp3" id="4_jticx"]
[ext_resource type="Texture2D" uid="uid://8bbft02k0xk2" path="res://UI/kawa2.png" id="5_2v5w5"]
[ext_resource type="Texture2D" uid="uid://hu5qeb2mryp6" path="res://UI/lampa2.png" id="5_fxrjb"]
[ext_resource type="Texture2D" uid="uid://gqm44rn41ncd" path="res://UI/lampa3.png" id="6_5w1m3"]
[ext_resource type="Texture2D" uid="uid://dko68nj0eq1rq" path="res://UI/kawa3.png" id="6_v01ln"]
[ext_resource type="Texture2D" uid="uid://irqpf5dodoih" path="res://UI/lampa4.png" id="7_gtxu8"]
[ext_resource type="Texture2D" uid="uid://qv74510c11lo" path="res://UI/kawa4.png" id="7_qwb2e"]
[ext_resource type="Texture2D" uid="uid://cw5rs1o8a0luu" path="res://UI/kawa5.png" id="8_e7wgs"]
[ext_resource type="Texture2D" uid="uid://du3nrxlgsch8x" path="res://UI/lampa5.png" id="8_f800c"]
[ext_resource type="Texture2D" uid="uid://bwive2mu115cg" path="res://UI/kawa6.png" id="9_8hmbx"]
[ext_resource type="Texture2D" uid="uid://cjqneycpnwvj8" path="res://UI/lampa6.png" id="9_g4ywf"]
[ext_resource type="Texture2D" uid="uid://3mu0vc2wwuvl" path="res://UI/kawa7.png" id="10_8s52f"]

[sub_resource type="Gradient" id="Gradient_a3ke8"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ytqt7"]
gradient = SubResource("Gradient_a3ke8")

[sub_resource type="SpriteFrames" id="SpriteFrames_bxjob"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ehwqx")
}, {
"duration": 1.0,
"texture": ExtResource("4_0kwep")
}, {
"duration": 1.0,
"texture": ExtResource("5_fxrjb")
}, {
"duration": 1.0,
"texture": ExtResource("6_5w1m3")
}, {
"duration": 1.0,
"texture": ExtResource("5_fxrjb")
}, {
"duration": 1.0,
"texture": ExtResource("4_0kwep")
}, {
"duration": 1.0,
"texture": ExtResource("3_ehwqx")
}, {
"duration": 1.0,
"texture": ExtResource("7_gtxu8")
}, {
"duration": 1.0,
"texture": ExtResource("8_f800c")
}, {
"duration": 1.0,
"texture": ExtResource("9_g4ywf")
}, {
"duration": 1.0,
"texture": ExtResource("8_f800c")
}, {
"duration": 1.0,
"texture": ExtResource("7_gtxu8")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_o7fxr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_tffvf")
}, {
"duration": 1.0,
"texture": ExtResource("4_5cakg")
}, {
"duration": 1.0,
"texture": ExtResource("5_2v5w5")
}, {
"duration": 1.0,
"texture": ExtResource("6_v01ln")
}, {
"duration": 1.0,
"texture": ExtResource("7_qwb2e")
}, {
"duration": 1.0,
"texture": ExtResource("8_e7wgs")
}, {
"duration": 1.0,
"texture": ExtResource("9_8hmbx")
}, {
"duration": 1.0,
"texture": ExtResource("10_8s52f")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_87cqx")

[node name="Color" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.52588e-05
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture1D_ytqt7")

[node name="BKG" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 240.0
offset_right = 1040.0
offset_bottom = 600.0
scale = Vector2(1.8, 1.8)
texture = ExtResource("1_g3hhs")

[node name="Lampa" type="AnimatedSprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_bxjob")
autoplay = "default"
frame_progress = 0.800689

[node name="Kawa" type="AnimatedSprite2D" parent="."]
position = Vector2(959, 539)
scale = Vector2(1.8, 1.8)
sprite_frames = SubResource("SpriteFrames_o7fxr")
autoplay = "default"
frame_progress = 0.222335

[node name="Controls" type="Control" parent="."]
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="Controls"]
layout_mode = 2
offset_left = 753.0
offset_top = 327.0
offset_right = 1148.0
offset_bottom = 861.0
theme_override_constants/separation = 40
alignment = 1

[node name="NewGame" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_8wue4")
text = "Nowa Gra"

[node name="Continue" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_8wue4")
text = "Kontunuuj"

[node name="Tutorial" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_8wue4")
text = "Tutorial"

[node name="Exit" type="Button" parent="Controls/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_8wue4")
text = "Wyjscie"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jticx")

[connection signal="pressed" from="Controls/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="Controls/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
